# uni-t-thermal-uti120

./: README.md  pyproject.toml
docs/: SHORTCUTS.md  TECHNICAL.md
uti120/: camera_thread.py  constants.py  graph.py  gui.py  processor.py  shutter_handler.py  tiff_export.py  viewer.py  widgets.py
