[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uti120"
version = "1.0.0"
description = "UNI-T UTi120 Mobile Thermal Camera – USB viewer and analysis tool"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pyusb>=1.2,<2",
    "numpy>=1.24,<3",
    "opencv-python>=4.8,<5",
    "scipy>=1.11,<2",
    "PyQt6>=6.5,<7",
    "pyqtgraph>=0.13.4,<1",
    "PyOpenGL>=3.1,<4",
    "tifffile>=2024.1,<2026",
]

[tool.setuptools.packages.find]
include = ["uti120*"]


[project.scripts]
uti120 = "uti120.viewer:main"

[project.optional-dependencies]
dev = ["ruff", "mypy"]
